# claudeforge

./: README.md  docker-compose.yml
.beads/: issues.jsonl
backups/: usage-20260109-005030.db  usage-20260109-020013.db  usage-20260110-020013.db
client/: pyproject.toml
client/src/forgeclient/: __init__.py  claude_code.py  cli.py  config.py  display.py  local_cache.py  sync.py
client/tests/: conftest.py  test_claude_code.py  test_config.py  test_local_cache.py
server/: Dockerfile  pyproject.toml
server/src/forgeserver/: __init__.py  auth.py  db.py  main.py  models.py
server/src/forgeserver/routers/: machines.py  stats.py  sync.py
server/tests/: conftest.py  test_stats.py  test_sync.py
