[project]
name = "forgeclient"
version = "0.1.0"
description = "CLI client for Claude usage tracking"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
]

[project.scripts]
forge = "forgeclient.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forgeclient"]
